Squashed commit of the following:
commit 5c699bf9e652841b78867da07484dd528b9f82cc
Author: Emad Elsaid <emad.elsaid.hamed@gmail.com>
Date:   Tue Jun 30 12:15:39 2020 +0200

    update readme

commit ae8353ca56b0bccced640904be8c26c7fa58efb7
Author: Emad Elsaid <emad.elsaid.hamed@gmail.com>
Date:   Tue Jun 30 10:30:10 2020 +0200

    correct authorization header

commit e0f87502a6b04958ff7cd86c255dd7090e5ffc25
Author: Emad Elsaid <emad.elsaid.hamed@gmail.com>
Date:   Tue Jun 30 10:16:34 2020 +0200

    basic auth backend working, sender javascript is not
